# pd42s1-motor

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  controller.py  protocol.py  pyproject.toml  unpack.py
commands/: __init__.py  advanced.py  motor.py  system.py
